--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- main css -->
   <link rel="stylesheet" href="assets/css/style.css">
   <!-- favicon -->
-  <link rel="shortcut icon" href="assets/images/favicon.webp" type="image">
+  <link rel="shortcut icon" href="assets/images/favicon.webp" type="icon">
 
   <title>RESTAN</title>
 </head>
@@ -28,7 +28,7 @@
 
       <button class=" border-danger fs-1 px-2 rounded-3 bg-white py-2 d-lg-none " type="button"
         data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling" aria-controls="offcanvasScrolling">
-        <div class=" d-flex align-items-center">
+        <div class="d-flex justify-content-center align-items-center">
           <img src="assets/images/toggler-logo.png" alt="">
         </div>
       </button>
@@ -71,13 +71,13 @@
         </div>
       </div>
       <!-- offcanvas end -->
-      <div class="d-none d-lg-block">
-        <i class=" fa-solid fa-cart-shopping  fs-3 position-relative pe-3 "></i>
+      <div class="d-none d-lg-block ">
+        <i class=" fa-solid fa-cart-shopping  fs-3 position-relative pe-3 cursor-aplly "></i>
         <sup
           class="card-number d-flex align-items-center justify-content-center sup-item me-5 align-top bg-danger text-white fw-bold ">10</sup>
         <span class="border-start h-100 pe-3"></span>
 
-        <img class="" src="assets/images/toggler-logo.png" alt="toggler">
+        <img class="cursor-aplly" src="assets/images/toggler-logo.png" alt="toggler">
       </div>
     </div>
   </nav>
@@ -126,7 +126,7 @@
         <div class="col-lg-6 d-flex justify-content-center align-items-center">
           <img class="img-fluid mb-5" src="assets/images/best-food-img.png" alt="best food">
         </div>
-        <div class="col-lg-6 position-relative">
+        <div class="col-lg-6">
           <div class="first-text ">
             <h2 class="fs-1 fw-bold ">Best food ideas & traditions in the world</h2>
           </div>
@@ -143,8 +143,12 @@
                   sang
                   know
                   now.</p>
-                <button class="btn bg-danger  py-1 px-2 text-uppercase text-white rounded-0">explore
-                  Menu</button>
+
+                <div class="btn-design">
+                  <button class="">explore
+                    Menu</button>
+                </div>
+
               </div>
             </div>
             <div class="col-lg-6 col-md-6">
@@ -207,7 +211,9 @@
         <div class="col-lg-4 col-md-6 mb-4">
           <div class="food-item border rounded-4">
             <div class="food-img position-relative">
-              <img class="w-100" src="assets/images/specials-menu-img-1.png" alt="Braised Chicken Legs">
+              <div class="img-hover w-100">
+                <img class="w-100" src="assets/images/specials-menu-img-1.png" alt="Braised Chicken Legs">
+              </div>
               <div class="position-absolute bottom-0 py-3 ps-2 rounded-end-3 rounded-bottom-0 bg-white">
                 <span class="ps-2 fw-bold">Price: 250/=</span>
                 <span class="color-custom ms-4"><i class="fa-solid fa-star"></i></span>
@@ -236,7 +242,9 @@
         <div class="col-lg-4 col-md-6 mb-4">
           <div class="food-item border rounded-4">
             <div class="food-img position-relative">
-              <img class="w-100" src="assets/images/specials-menu-img-2.png" alt="Braised Chicken Legs">
+              <div class="img-hover w-100">
+                <img class="w-100" src="assets/images/specials-menu-img-2.png" alt="Braised Chicken Legs">
+              </div>
               <div class="position-absolute bottom-0 py-3 ps-2 rounded-end-3 rounded-bottom-0 bg-white">
                 <span class="ps-2 fw-bold">Price: 250/=</span>
                 <span class="color-custom ms-4"><i class="fa-solid fa-star"></i></span>
@@ -265,7 +273,9 @@
         <div class="col-lg-4 col-md-6 mb-4">
           <div class="food-item border rounded-4">
             <div class="food-img position-relative">
-              <img class="w-100" src="assets/images/specials-menu-img-3.png" alt="Braised Chicken Legs">
+              <div class="img-hover w-100">
+                <img class="w-100" src="assets/images/specials-menu-img-3.png" alt="Braised Chicken Legs">
+              </div>
               <div class="position-absolute bottom-0 py-3 ps-2 rounded-end-3 rounded-bottom-0 bg-white">
                 <span class="ps-2 fw-bold">Price: 250/=</span>
                 <span class="color-custom ms-4"><i class="fa-solid fa-star"></i></span>
@@ -294,7 +304,9 @@
         <div class="col-lg-4 col-md-6 mb-4">
           <div class="food-item border rounded-4">
             <div class="food-img position-relative">
-              <img class="w-100" src="assets/images/specials-menu-img-4.png" alt="Braised Chicken Legs">
+              <div class="img-hover w-100">
+                <img class="w-100" src="assets/images/specials-menu-img-4.png" alt="Braised Chicken Legs">
+              </div>
               <div class="position-absolute bottom-0 py-3 ps-2 rounded-end-3 rounded-bottom-0 bg-white">
                 <span class="ps-2 fw-bold">Price: 250/=</span>
                 <span class="color-custom ms-4"><i class="fa-solid fa-star"></i></span>
@@ -323,7 +335,9 @@
         <div class="col-lg-4 col-md-6 mb-4">
           <div class="food-item border rounded-4">
             <div class="food-img position-relative">
-              <img class="w-100" src="assets/images/specials-menu-img-5.png" alt="Braised Chicken Legs">
+              <div class="img-hover w-100">
+                <img class="w-100" src="assets/images/specials-menu-img-5.png" alt="Braised Chicken Legs">
+              </div>
               <div class="position-absolute bottom-0 py-3 ps-2 rounded-end-3 rounded-bottom-0 bg-white">
                 <span class="ps-2 fw-bold">Price: 250/=</span>
                 <span class="color-custom ms-4"><i class="fa-solid fa-star"></i></span>
@@ -352,7 +366,9 @@
         <div class="col-lg-4 col-md-6 mb-4">
           <div class="food-item border rounded-4">
             <div class="food-img position-relative">
-              <img class="w-100" src="assets/images/specials-menu-img-6.png" alt="Braised Chicken Legs">
+              <div class="img-hover w-100">
+                <img class="w-100" src="assets/images/specials-menu-img-6.png" alt="Braised Chicken Legs">
+              </div>
               <div class="position-absolute bottom-0 py-3 ps-2 rounded-end-3 rounded-bottom-0 bg-white">
                 <span class="ps-2 fw-bold">Price: 250/=</span>
                 <span class="color-custom ms-4"><i class="fa-solid fa-star"></i></span>
@@ -419,14 +435,14 @@
           <div class="bg-white">
             <form action="#" class="p-4 mt-4">
               <input class="form-control bg-white d-block w-100 mt-2" type="text" placeholder="Phone No">
-              <select class="form-select d-block w-100 mt-2" name="" id="">
+              <select class="form-select d-block w-100 mt-2" name="select">
                 <option class="text-black">1 Person</option>
                 <option>2 Person</option>
                 <option>1 </option>
                 <option>1</option>
               </select>
               <input class="form-control bg-white d-block w-100 mt-2" type="date" placeholder="Date">
-              <select class="form-select d-block w-100 mt-2" name="" id="">
+              <select class="form-select d-block w-100 mt-2">
                 <option value="">10:00 PM</option>
                 <option value="">11:00 PM</option>
                 <option value="">12:00 PM</option>
@@ -501,14 +517,14 @@
 
   <!-- footer start -->
 
-  <footer class="footer">
+  <footer class="footer z-n1">
     <div class="container position-relative">
       <div class="footer-logo py-5 d-flex align-items-center justify-content-between">
         <div class="footer-line"></div>
         <div><img class="fs-1 mx-4" src="assets/images/footer-logo.png" alt="footer logo"></div>
         <div class="footer-line"></div>
       </div>
-      <div class="row footer-text-color mb-5">
+      <div class="row footer-text-color mb-5 z-1">
         <div class="col-lg-3 d-md-flex justify-content-md-center align-content-md-center">
           <div>
             <h4 class="fw-bold mb-4">About Us</h4>
@@ -516,12 +532,23 @@
               necessary is Surrounded sir motionless she end literature. Gay
               direction neglected.
             </p>
-            <div class="icon mt-3 mb-5 w-100">
-              <a class=" py-2 px-3 me-1 bg-custom-footer text-white fs-4" href="#"><i
-                  class="fa-brands fa-facebook-f"></i></a>
-              <a class=" p-2 me-1 bg-custom-footer text-white fs-4" href="#"><i class="fa-brands fa-twitter"></i></a>
-              <a class=" p-2 me-1 bg-custom-footer text-white fs-4" href="#"><i class="fa-brands fa-youtube"></i></a>
-              <a class=" py-2 px-3 bg-custom-footer text-white fs-4" href="#"><i class="fa-brands fa-linkedin"></i></a>
+            <div class="d-flex icon mt-3 mb-5 w-100">
+              <div>
+                <a class="footer-icon py-2 px-3 me-1 bg-custom-footer text-white fs-4" href="#"><i
+                    class="fa-brands fa-facebook-f"></i></a>
+              </div>
+              <div>
+                <a class="footer-icon p-2 me-1 bg-custom-footer text-white fs-4" href="#"><i
+                    class="fa-brands fa-twitter"></i></a>
+              </div>
+              <div>
+                <a class="footer-icon p-2 me-1 bg-custom-footer text-white fs-4" href="#"><i
+                    class="fa-brands fa-youtube"></i></a>
+              </div>
+              <div>
+                <a class="footer-icon py-2 px-3 bg-custom-footer text-white fs-4" href="#"><i
+                    class="fa-brands fa-linkedin"></i></a>
+              </div>
             </div>
           </div>
         </div>
@@ -534,25 +561,42 @@
             <li class="mb-2"><a href="#">Return Policy</a></li>
           </ul>
         </div>
-        <div class="col-lg-3 mb-4">
+        <div class="col-lg-3 mb-4 ">
           <h4 class="fw-bold mb-4">Contact Info</h4>
           <div class="d-flex mb-2 align-items-center w-100">
-            <a class=" icon-style bg-custom me-3 text-white fs-4" href="#"><i class="fas fa-location-arrow"></i>
-            </a>
-            <p class="w-100 m-0">Dogair Bazar, Signboard, demra, Dhaka - 1206</p>
+            <div class="">
+              <a class=" icon-style bg-custom me-3 text-white fs-4" href="#"><i class="fa-solid fa-location-arrow"></i>
+              </a>
+            </div>
+            <ul class="mb-0 ps-0">
+              <li>
+                <p class="w-100 m-0">Dogair Bazar, Signboard, demra, Dhaka - 1206</p>
+              </li>
+            </ul>
           </div>
-          <div class="d-flex mb-3 align-items-center w-100">
-            <a class="  icon-style bg-custom me-3  text-white fs-4" href="#"><i class="fa-solid fa-phone"></i>
-            </a>
+          <div class="d-flex mb-3 align-items-center w-100 ">
             <div>
-              <a href="tel:+8801728000000" class="mb-0 d-block">+880 1728 000000</a>
-              <a href="tel:+8801728000000" class="mb-0 d-block">+880 1728 000000</a>
+              <a class="  icon-style bg-custom me-3  text-white fs-4" href="#"><i class="fa-solid fa-phone"></i>
+              </a>
+            </div>
+            <div>
+              <ul class="mb-0 ps-0">
+                <li><a href=" tel:+8801728000000" class="mb-0 d-block">+880 1728 000000</a></li>
+                <li><a href="tel:+8801728000000" class="mb-0 d-block">+880 1728 000000</a></li>
+              </ul>
             </div>
           </div>
           <div class="d-flex mb-3 align-items-center w-100">
-            <a class=" icon-style bg-custom  me-3  text-white fs-4" href="#"><i class="fa-solid fa-square-envelope"></i>
-            </a>
-            <a href="mailto:ibrahim06978@gmail.com" class="m-0">ibrahim06978@gmail.com</a>
+            <div>
+              <a class=" icon-style bg-custom  me-3  text-white fs-4" href="#"><i
+                  class="fa-solid fa-square-envelope"></i>
+              </a>
+            </div>
+            <ul class="mb-0 ps-0">
+              <li>
+                <a href="mailto:ibrahim06978@gmail.com" class="m-0">ibrahim06978@gmail.com</a>
+              </li>
+            </ul>
           </div>
         </div>
         <div class="col-lg-4">
@@ -564,9 +608,7 @@
           </div>
         </div>
       </div>
-      <div class="footer-img position-absolute d-none d-md-block">
-        <img class="img-fluid" src="assets/images/footer-img.png" alt="">
-      </div>
+
     </div>
     <div class="footer-text-color bg-custom-footer">
       <p class=" text-center py-4">© Copyright 2024 Restan. All Rights Reserved by Restan.</p>
